@@ -53,6 +53,8 @@ import org.apache.zookeeper.server.NIOServerCnxn;
 import org.apache.zookeeper.server.ZKDatabase;
 import org.apache.zookeeper.server.ZooKeeperServer;
 import org.apache.zookeeper.server.persistence.FileTxnLog;
+import org.apache.zookeeper.server.quorum.QuorumPeer;
+
 import static org.apache.zookeeper.client.FourLetterWordMain.send4LetterWord;
 
 import com.sun.management.UnixOperatingSystemMXBean;
@@ -257,6 +259,23 @@ public abstract class ClientBase extends TestCase {
             }
         }
         return false;
+    }
+
+    public static boolean waitForServerState(QuorumPeer qp, int timeout,
+            String serverState) {
+        long start = System.currentTimeMillis();
+        while (true) {
+            try {
+                Thread.sleep(250);
+            } catch (InterruptedException e) {
+                // ignore
+            }
+            if (qp.getServerState().equals(serverState))
+                return true;
+            if (System.currentTimeMillis() > start + timeout) {
+                return false;
+            }
+        }
     }
 
     static void verifyThreadTerminated(Thread thread, long millis)
